@@ -1,14 +1,14 @@
 package com.domingueti.tradebot.modules.Document.services;
 
-import java.util.List;
-
+import com.domingueti.tradebot.modules.Document.dtos.DocumentDTO;
+import com.domingueti.tradebot.modules.Document.models.Document;
+import com.domingueti.tradebot.modules.Document.repositories.DocumentRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.domingueti.tradebot.modules.Document.dtos.DocumentDTO;
-import com.domingueti.tradebot.modules.Document.models.Document;
-import com.domingueti.tradebot.modules.Document.repositories.DocumentRepository;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class GetDocumentsService {
@@ -21,7 +21,7 @@ public class GetDocumentsService {
 		
 		List<Document> documents = documentRepository.findAllByDeletedAtIsNull();
 		
-		return documents.stream().map(DocumentDTO::new).toList();
+		return documents.stream().map(DocumentDTO::new).collect(Collectors.toList());
 	}
 
 }
